:meat_on_bone: more progress. - figured out the cloudinary issue; my request and cloudinary's response do not show up in the DOM. seems like when you request a jpg, it looks to see is your browser can handle a webp, and if so, sends it. in the DOM inspector, this change is not reflected, only in the network tab - cleaned up the html to suit - added a smaller image media query for the main image at the top, even though that image is still too big

--- a/src/cube-styles/layouts/_heroInfo.scss
+++ b/src/cube-styles/layouts/_heroInfo.scss
@@ -11,7 +11,11 @@ $tagline-height: 40.25rem;
 .hero {
   // --footer-height: calc(#{$tagline-height} / 7);
   --footer-height: 35vh;
-  background-image: url('https://res.cloudinary.com/toupeeproofbullets/image/upload/v1602646449/ilnido-repo/nido_dining_room_2.jpg');
+  @media screen and (max-width: $medium-screen) {
+    background-image: url('https://res.cloudinary.com/toupeeproofbullets/image/upload/c_crop,g_center,h_621,w_414/v1603209212/ilnido-repo/diningRoomNECrop.jpg');
+  }
+
+  background-image: url('https://res.cloudinary.com/toupeeproofbullets/image/upload/c_scale,q_auto,dpr_auto,f_auto/v1603140258/ilnido-repo/diningRoomNECrop.jpg');
   background-size: cover;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
